tests/fixtures/invalid/str_bitand_float.py
# Cannot bitwise AND Str and Float
x: float = "hello" & 1.0
